--- a/.github/workflows/lapras-card.yml
+++ b/.github/workflows/lapras-card.yml
@@ -19,7 +19,7 @@ jobs:
           # ICON_SECOND: "#1688BF"
           # BACKGROUND_FIRST: "#020E27"
           # BACKGROUND_SECOND: "#0E5593"
-          # LANG: "ja"
+          LANG: "en"
           # CARD_WIDTH: "400"
           # UPDATE_TIME: "true"
           # README_FILE: "README.md"
