--- a/.github/workflows/lapras-card.yml
+++ b/.github/workflows/lapras-card.yml
@@ -26,6 +26,7 @@ jobs:
           # BACKGROUND_FIRST: "#020E27"
           # BACKGROUND_SECOND: "#0E5593"
           LANG: "en"
+          LOCALE: "ja_JP"
           # CARD_WIDTH: "400"
           # UPDATE_TIME: "true"
           # README_FILE: "README.md"
