--- a/.github/workflows/lapras-card.yml
+++ b/.github/workflows/lapras-card.yml
@@ -8,7 +8,9 @@ on:
 jobs:
   update-card:
     name: LAPRAS Card
-    runs-on: ubuntu-latest        
+    runs-on: ubuntu-latest
+    env:
+      TZ: Asia/Tokyo  # タイムゾーンを日本時間に設定
     steps:
       - name: Set up JA_JP locale
         run: |
@@ -26,7 +28,6 @@ jobs:
           # BACKGROUND_FIRST: "#020E27"
           # BACKGROUND_SECOND: "#0E5593"
           LANG: "en"
-          LOCALE: "ja_JP"
           # CARD_WIDTH: "400"
           # UPDATE_TIME: "true"
           # README_FILE: "README.md"
